[gd_scene load_steps=39 format=3 uid="uid://cw70d4dprmp34"]

[ext_resource type="Shader" uid="uid://c3xm1dtho44rx" path="res://scenes/entities/B1/hit.gdshader" id="1_kj6eb"]
[ext_resource type="Script" uid="uid://l6av0fiu84ki" path="res://Tests/entitie_script.gd" id="2_kqee4"]
[ext_resource type="Script" uid="uid://cn2cxmlk7ocp7" path="res://Enemies/ENEMYSTATES.gd" id="3_c4gpf"]
[ext_resource type="Script" uid="uid://ha1phkjvlhfk" path="res://Enemies/Bettleboroughs/Wasp/enemy_idle.gd" id="4_tu1wc"]
[ext_resource type="Script" uid="uid://c8jp6knvxlmu3" path="res://Enemies/Bettleboroughs/Wasp/enemy_hit.gd" id="5_66r8x"]
[ext_resource type="Script" uid="uid://dyk2vmfn1l6hf" path="res://Enemies/Bettleboroughs/Wasp/enemy_defeat.gd" id="6_x838a"]
[ext_resource type="Script" uid="uid://vycs3gdlawjp" path="res://Enemies/Bettleboroughs/Wasp/enemy_follow.gd" id="7_yxdc2"]
[ext_resource type="Script" uid="uid://ll25btbbbmap" path="res://Enemies/Bettleboroughs/Wasp/enemy_prepare.gd" id="8_7f077"]
[ext_resource type="Script" uid="uid://61dfmvp3dox0" path="res://Enemies/Bettleboroughs/Wasp/enemy_attack.gd" id="9_ynghh"]
[ext_resource type="Texture2D" uid="uid://c745eja0irsba" path="res://Sprites/Bettlebourough/enemies/wasp/dead.png" id="10_q4k4k"]
[ext_resource type="Texture2D" uid="uid://bf6uew58kh6bw" path="res://Sprites/Bettlebourough/enemies/Pulga eletrica/choque.png" id="12_wpufb"]
[ext_resource type="Material" uid="uid://wq8m3q6pclkd" path="res://shaders/hitshader.tres" id="21_rrn68"]
[ext_resource type="Texture2D" uid="uid://7ntjt8cdj3uv" path="res://Sprites/Bettlebourough/enemies/Pulga eletrica/pulga.png" id="23_h20l8"]
[ext_resource type="Texture2D" uid="uid://dgjoqfguta3r" path="res://Tests/smoke.png" id="28_qits6"]
[ext_resource type="Material" uid="uid://cdgsydya4x6w7" path="res://scenes/entities/damageparticles.tres" id="29_y66xd"]
[ext_resource type="Script" uid="uid://cxs6ii1pkxy2a" path="res://scenes/entities/B1/hitboxComponent.gd" id="30_loq7a"]
[ext_resource type="AudioStream" uid="uid://dhn7eingilut8" path="res://Sound/Testmusic&sounds/wasp-sound-effect.mp3" id="31_4vlbo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kehak"]
shader = ExtResource("1_kj6eb")
shader_parameter/active = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kxu8r"]
size = Vector2(2236, 3159)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tmulh"]
size = Vector2(290, 215)

[sub_resource type="Animation" id="Animation_wb5q1"]
resource_name = "defeat"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.233333, 0.3, 0.4, 0.5, 0.566667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.314159, -0.314159, 0.314159, 0.314159, -0.314159, 0.314159, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.314159, -0.314159, 0.314159, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GPUParticles2D2:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0232579, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.214)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("EnemyStateMachine/EnemyDefeat")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"death"
}]
}

[sub_resource type="Animation" id="Animation_b3q0i"]
resource_name = "defeat_2"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.233333, 0.3, 0.4, 0.5, 0.566667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.314159, -0.314159, 0.314159, 0.314159, -0.314159, 0.314159, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.314159, -0.314159, 0.314159, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0232579, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_q4k4k")]
}

[sub_resource type="Animation" id="Animation_4awq0"]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.233333, 0.3, 0.4, 0.5, 0.566667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.314159, -0.314159, 0.314159, 0.314159, -0.314159, 0.314159, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.314159, -0.314159, 0.314159, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:is_dealing_damage")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nllgd"]
_data = {
&"defeat": SubResource("Animation_wb5q1"),
&"defeat_2": SubResource("Animation_b3q0i"),
&"hit": SubResource("Animation_4awq0")
}

[sub_resource type="Animation" id="Animation_1x4du"]
length = 0.5
loop_mode = 1
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}

[sub_resource type="Animation" id="Animation_iideb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D2:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}

[sub_resource type="Animation" id="Animation_wpufb"]
resource_name = "prepare"
length = 0.5
loop_mode = 2
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 7, 8, 10]
}

[sub_resource type="Animation" id="Animation_351g6"]
resource_name = "shake"
length = 1.4
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56, 0.64, 0.72, 0.8, 0.88, 0.96, 1.04, 1.12, 1.2, 1.28),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.18, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.1, 0.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ep2or"]
resource_name = "shock"
length = 0.2
loop_mode = 1
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16),
"transitions": PackedFloat32Array(1, 1, 0.965936),
"update": 1,
"values": [14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.24),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lgrry"]
_data = {
&"Idle": SubResource("Animation_1x4du"),
&"RESET": SubResource("Animation_iideb"),
&"prepare": SubResource("Animation_wpufb"),
&"shake": SubResource("Animation_351g6"),
&"shock": SubResource("Animation_ep2or")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_s65u1"]
lifetime_randomness = 0.16
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 75.53
direction = Vector3(20, -20, 20)
spread = 24.494
initial_velocity_min = 66.67
initial_velocity_max = 66.67
radial_velocity_min = -2.23517e-05
radial_velocity_max = 533.33
gravity = Vector3(0, -100, 0)
linear_accel_min = -76.37
linear_accel_max = -13.34
radial_accel_min = -2.23517e-06
radial_accel_max = 53.33
collision_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kctrd"]
size = Vector2(664, 612)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0iu8b"]
size = Vector2(473, 470)

[sub_resource type="AtlasTexture" id="AtlasTexture_351g6"]
atlas = ExtResource("12_wpufb")
region = Rect2(0, 0, 750, 750)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep2or"]
atlas = ExtResource("12_wpufb")
region = Rect2(750, 0, 750, 750)

[sub_resource type="AtlasTexture" id="AtlasTexture_5npt7"]
atlas = ExtResource("12_wpufb")
region = Rect2(0, 750, 750, 750)

[sub_resource type="AtlasTexture" id="AtlasTexture_r85rx"]
atlas = ExtResource("12_wpufb")
region = Rect2(750, 750, 750, 750)

[sub_resource type="SpriteFrames" id="SpriteFrames_uc1so"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_351g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep2or")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5npt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r85rx")
}],
"loop": true,
"name": &"active",
"speed": 10.0
}, {
"frames": [],
"loop": true,
"name": &"inactive",
"speed": 5.0
}]

[node name="Wasp" type="CharacterBody2D" groups=["Enemies"]]
material = SubResource("ShaderMaterial_kehak")
script = ExtResource("2_kqee4")
coin_amount = 4
health = 1
health_max = null
health_min = null
damage_value = 10
damage_max = null
damage_min = null
crit_chance = null
is_dealing_damage = true
speed = null
movement_type = 1
gravity_type = null
gravity_strength = null

[node name="EnemyStateMachine" type="Node" parent="."]
script = ExtResource("3_c4gpf")

[node name="EnemyIdle" type="Node" parent="EnemyStateMachine"]
script = ExtResource("4_tu1wc")

[node name="EnemyHit" type="Node" parent="EnemyStateMachine"]
script = ExtResource("5_66r8x")

[node name="EnemyDefeat" type="Node" parent="EnemyStateMachine"]
script = ExtResource("6_x838a")

[node name="EnemyFollow" type="Node" parent="EnemyStateMachine"]
script = ExtResource("7_yxdc2")

[node name="EnemyPrepare" type="Node" parent="EnemyStateMachine"]
script = ExtResource("8_7f077")

[node name="EnemyAttack" type="Node" parent="EnemyStateMachine"]
script = ExtResource("9_ynghh")

[node name="FollowArea" type="Area2D" parent="."]
position = Vector2(-31.1836, -5)
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowArea"]
position = Vector2(60.3672, -640)
shape = SubResource("RectangleShape2D_kxu8r")
debug_color = Color(0.590083, 0.453461, 0.803131, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(14, 80.5)
shape = SubResource("RectangleShape2D_tmulh")

[node name="Hit" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_nllgd")
}

[node name="Body" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_lgrry")
}
autoplay = "Idle"

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(78.8164, 0)
emitting = false
amount = 7
texture = ExtResource("28_qits6")
lifetime = 2.0
one_shot = true
preprocess = 0.2
explosiveness = 0.86
randomness = 0.67
process_material = ExtResource("29_y66xd")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
position = Vector2(-7, 89)
emitting = false
amount = 30
texture = ExtResource("28_qits6")
lifetime = 90.55
one_shot = true
explosiveness = 1.0
randomness = 0.12
process_material = SubResource("ParticleProcessMaterial_s65u1")

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2(-29.1836, 42)
scale = Vector2(0.5, 0.5)
script = ExtResource("30_loq7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(86.3672, 92)
shape = SubResource("RectangleShape2D_kctrd")
debug_color = Color(0.960621, 0.526551, 0.690575, 0.419608)

[node name="Directiontimer" type="Timer" parent="."]
autostart = true

[node name="PrepareTimer" type="Timer" parent="."]

[node name="Statelabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -117.184
offset_top = -498.0
offset_right = 407.816
offset_bottom = -250.0
theme_override_font_sizes/font_size = 181
text = "STATE"
metadata/_edit_use_anchors_ = true

[node name="HPlabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -645.0
offset_top = -487.0
offset_right = -120.0
offset_bottom = -239.0
theme_override_font_sizes/font_size = 181
text = "HP
"
metadata/_edit_use_anchors_ = true

[node name="Attackbox" type="Area2D" parent="." groups=["EnemyAttackboxs"]]

[node name="Attackcollision" type="CollisionShape2D" parent="Attackbox"]
unique_name_in_owner = true
position = Vector2(14.5, 27)
shape = SubResource("RectangleShape2D_0iu8b")
disabled = true
debug_color = Color(0.986317, 0.0702289, 0.2335, 0.42)

[node name="Raycasts" type="Node2D" parent="."]
unique_name_in_owner = true
scale = Vector2(5, 5)

[node name="Rightraycast" type="RayCast2D" parent="Raycasts"]
rotation = -1.5708
scale = Vector2(2, 1)
target_position = Vector2(-7.23998e-05, 40)

[node name="Leftraycast" type="RayCast2D" parent="Raycasts"]
rotation = 1.5708
scale = Vector2(2, 1)
target_position = Vector2(-0.0999334, 36.8)

[node name="Upraycast" type="RayCast2D" parent="Raycasts"]
rotation = -3.15411
scale = Vector2(2, 1)
enabled = false
target_position = Vector2(-7.23998e-05, 40)

[node name="Downraycast" type="RayCast2D" parent="Raycasts"]
rotation = -0.0125099
scale = Vector2(2, 1)
enabled = false
target_position = Vector2(-0.455265, 56.7931)

[node name="DamagenumOrigin" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(-4, -329)

[node name="Dropmarker" type="Marker2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("31_4vlbo")
pitch_scale = 0.88

[node name="Sprite2D2" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
material = ExtResource("21_rrn68")
position = Vector2(7, 47)
rotation = 0.314159
sprite_frames = SubResource("SpriteFrames_uc1so")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = ExtResource("21_rrn68")
rotation = 0.314159
texture = ExtResource("23_h20l8")
offset = Vector2(33, -14)
hframes = 5
vframes = 5

[connection signal="body_entered" from="FollowArea" to="." method="_on_follow_area_body_entered"]
[connection signal="body_exited" from="FollowArea" to="." method="_on_follow_area_body_exited"]
[connection signal="area_entered" from="DamageArea" to="." method="_on_damage_area_area_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="timeout" from="Directiontimer" to="." method="_on_directiontimer_timeout"]
